WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
196013
RTL/overflow scroll tests fail with async overflow enabled
https://bugs.webkit.org/show_bug.cgi?id=196013
Summary
RTL/overflow scroll tests fail with async overflow enabled
Simon Fraser (smfr)
Reported
2019-03-20 10:22:44 PDT
Need to fix: Regressions: Unexpected text-only failures (2) compositing/rtl/rtl-overflow-scrolling.html [ Failure ] fast/scrolling/home-end-keys-scroll-in-rtl-document.html [ Failure ] Regressions: Unexpected image-only failures (3) fast/scrolling/rtl-scrollbars-sticky-overflow-scroll-2.html [ ImageOnlyFailure ] fast/scrolling/rtl-scrollbars-sticky-overflow-scroll.html [ ImageOnlyFailure ] fast/scrolling/rubber-band-shows-background.html [ ImageOnlyFailure ]
Attachments
patch
(11.70 KB, patch)
2019-05-20 19:35 PDT
,
Antti Koivisto
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Radar WebKit Bug Importer
Comment 1
2019-03-20 10:23:20 PDT
<
rdar://problem/49066649
>
Simon Fraser (smfr)
Comment 2
2019-05-04 11:57:50 PDT
Also compositing/rtl/rtl-scrolling-with-transformed-descendants.html.
Antti Koivisto
Comment 3
2019-05-20 19:35:06 PDT
Not all these failures are RTL related.
Antti Koivisto
Comment 4
2019-05-20 19:35:57 PDT
Created
attachment 370293
[details]
patch
WebKit Commit Bot
Comment 5
2019-05-21 08:53:47 PDT
Comment on
attachment 370293
[details]
patch Clearing flags on attachment: 370293 Committed
r245568
: <
https://trac.webkit.org/changeset/245568
>
WebKit Commit Bot
Comment 6
2019-05-21 08:53:48 PDT
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug